21) kernel: ralink_arch: fix MT7628 SDXC clock interferences.<br>
22) kernel: ralink_arch: fix reset MT7621 PCIe peripherals on disable GPIO_PERST def.<br>
23) kernel: ralink_nvram: fix check part size in commit.<br>
24) kernel: ralink_hw_nat: add FoE 80b entries workaround on IPv6 offload enabled.<br>
25) kernel: ralink_hw_nat: disable multicast offload on QDMA enabled (CPU reason is stripped after FQ).<br>
26) kernel: ralink_raeth: fix MT7628 EPHY initialization.<br>
27) kernel: ralink_raeth: always use TX ring size 512 to prevent ring full on PPE loopback traffic.<br>
28) kernel: ralink_raeth: add support MT7621 'clause 45' MDIO control.<br>
29) kernel: ralink_raeth: fix dump MT7621/MT7530 EPHY registers.<br>
30) kernel: ralink_raeth: move early ESW init to global unit.<br>
31) kernel: ralink_raeth: add EEE-related functions, disable EEE by default, fix disable EEE on MT7620 ESW, improve EEE support on MT7621/MT7530.<br>
32) kernel: ralink_raeth: add support to disable any EPHY.<br>
33) kernel: ralink_raeth: improve MT7621 performance on TX path.<br>
34) kernel: tcp: update reordering first before detecting loss.<br>
35) kernel: tcp: set SOCK_NOSPACE under memory pressure.<br>
36) kernel: exfat driver: upstream updates.<br>
37) kernel: initial port ipt_accounting to 3.4 kernel.<br>
38) kernel: driver core: fix race with userland in device_add().<br>
39) kernel: pppoe: drop pppoe device in pppoe_unbind_sock_work.<br>
40) kernel: netfilter: nf_nat_h323: fix crash in nf_ct_unlink_expect_report().<br>
41) kernel: netfilter: nf_ct_sip: extend RCU read lock in set_expected_rtp_rtcp().<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (need help community or employ the web developer).<br>
2) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
3) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
4) need add davfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>